# Media-Wrangling-Library

./: .gitignore  CMakeLists.txt  README.md  scripts.py
include/: mwl_image.h
src/: CMakeLists.txt  image.c  image.h  image_handler.c  image_handler.h  main.c  mwl_image.c  png.c  png.h  ppm.c  ppm.h  qoi.c  qoi.h  util.c  util.h
test/: test.c
